added poetry management instead of pip

--- a/item2/Dockerfile
+++ b/item2/Dockerfile
@@ -1,8 +1,7 @@
 # syntax=docker/dockerfile:1
 
 # Use the specified Python version as the base image
-ARG PYTHON_VERSION=3.10.9
-FROM python:${PYTHON_VERSION}-slim as base
+FROM python:3.10.9-slim as base
 
 # Prevents Python from writing pyc files.
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -14,27 +13,18 @@ ENV PYTHONUNBUFFERED=1
 # Set the working directory inside the container
 WORKDIR /app
 
-# Create a non-privileged user that the app will run under.
-# See https://docs.docker.com/go/dockerfile-user-best-practices/
-ARG UID=10001
-RUN adduser \
-    --disabled-password \
-    --gecos "" \
-    --home "/nonexistent" \
-    --shell "/sbin/nologin" \
-    --no-create-home \
-    --uid "${UID}" \
-    appuser
+# Install Poetry
+RUN pip install poetry
 
-# Download dependencies as a separate step to take advantage of Docker's caching.
-# Leverage a cache mount to /root/.cache/pip to speed up subsequent builds.
-# Leverage a bind mount to requirements.txt to avoid having to copy them into
-# this layer.
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=bind,source=requirements.txt,target=requirements.txt \
-    python -m pip install -r requirements.txt
+# Copy only the dependency files to leverage Docker caching
+COPY pyproject.toml poetry.lock /app/
 
-RUN mkdir /app/uploads
+# Install dependencies using Poetry
+RUN poetry config virtualenvs.create false \
+    && poetry install --no-root --no-interaction --no-ansi
+
+
+RUN mkdir /app/upload
 COPY web.py /app/
 COPY test.pt /app/
 COPY templates /app/templates
